--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ nav{
 	padding-bottom: 2%;
     background-color: #FFDEAD;
 }
-ul{padding-left: 10%;}
+ul ol{padding-left: 10%;}
+li{padding: 1% 0;}
 footer{
     padding: 8%;
     clear: left;
@@ -67,14 +68,16 @@ h4{
 }
 /*h in project-content*/
 h5{
-	margin: 1% 0;
+	margin: 2% 0;
 	color: #FF6C00;
-	font-size: 25px;
+	font-size: 26px;
 }
 h6{
-	margin: 1% 0;
-	color: #FF6C00;
-	font-size: 18px;
+	margin: 2% 0;
+	font-size: 20px;
+	border-bottom: 1px solid;
+	display: inline-block;
+	color: gray;
 }
 hr{
 	border-color: #FF6C00;
@@ -85,9 +88,11 @@ hr{
 }
 p{
 	color: rgb(64, 64, 64);
-	margin: 0% 0% 2% 0%;
-	font-size: 18px;
+	margin: 0%;
+	font-size: 17px;
 	line-height: 30px;}
+b{
+	font-size: 18px;}
 a{
 	color: gray;
 	text-decoration: none;
@@ -145,7 +150,7 @@ mark{
 }
 .parallax-index-1{
 	/*background-color: #FFDEAD;*/
-	background-image: url("img/wei.jpg");
+	background-image: url("img/bg.svg");
 }
 .parallax-art-1{ 
     background-color: #FFDEAD;
@@ -353,6 +358,12 @@ img.img-col-one{
 	margin: 3% 0 1% 0;
 	height: auto;
 }
+img.img-col-one-80{
+	width: 80%;
+	padding: 0 10%;
+	margin: 3% 0 1% 0;
+	height: auto;
+}
 img.img-col-two{
 	width: 100%;
 	margin: 4% 0% 1% 0%;
@@ -401,7 +412,7 @@ img.img-small-logo{
 	float: left;
 	width: 60%;
 	height: 100%;
-	padding: 3.5% 20%;
+	padding: 2% 20%;
 }
 .row-project-color{
 	background-color: #fffaf0;
@@ -409,12 +420,12 @@ img.img-small-logo{
 .row-full{
 	float: left;
 	width: 74%;
-	padding: 5% 13%;
+	padding: 3% 13%;
 }
 .col-one{
 	float: left;
 	width: 96%;
-	margin: 2%;
+	margin: 0 2%;
 	position: relative;
 }
 .col-two{
@@ -449,13 +460,12 @@ img.img-small-logo{
 /*****************************************************/
 .traits{
 	float: left;
-    width: 23.33333%;
+    width: 25.33333%;
     height: 18%;
-    margin: 0 3%;
+    margin: 3% 2%;
     position: relative;
 	padding: 2%;
 	text-align: center;
-	/*box-shadow: 2px 2px 12px grey;*/
     border-radius: 10%;
     background-color: white;
 }
