--- a/style-mobile.css
+++ b/style-mobile.css
@@ -326,11 +326,15 @@ footer{
 	padding: 5% 0;
 	margin: 0 auto;
 }
+.section-trait {
+    width: 90%;
+    float: left;
+    padding: 8% 5%;
+}
 .traits{
 	float: left;
-    width: 80%;
+    width: 86%;
     height: 18%;
-    margin: 5%;
     position: relative;
 	padding: 5%;
 	text-align: center;
@@ -354,11 +358,22 @@ img.img-col-two{
 }
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 750px){
     .responsive {
         width: 49.99999%;
         margin: 6px 0;
     }
+    img.img-intro{
+	width: 100%;
+	margin: 4% 0% 1% 0%;
+	height: auto;
+	}
+	.col-intro{
+    float: left;
+    width: 90%;
+    margin: 0 5%;
+    position: relative;
+	}
 }
 
 @media only screen and (max-width: 500px){
