--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,7 +1,4 @@
 /*mobile*/
-/******************************************************/
-/******************************************************/
-/******************************************************/
 @media screen and (max-width: 650px) {
 header{
     padding: 2%;
@@ -353,6 +350,9 @@ footer{
 }
 .hcenter{
 	margin-top: 3%;
+}
+.logo-small {
+    width: 10%;
 }
 img.img-col-two{ 
 }
