--- a/style.css
+++ b/style.css
@@ -4,15 +4,17 @@ html, body {
 	height: 100%;
 	margin: 0 1%;
 	/*font-family: 'Montserrat', serif;*/
-	font-family: 'Raleway', serif;
+	/*font-family: 'Raleway', serif;*/
+	font-family: 'Source Sans Pro';
 }
 article, aside, footer, header, main, nav, section {display: block;}
 body{
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	font-size: 17px;
-	line-height: 28px;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 32px;
 	font-style:none;
 }
 header{
@@ -42,43 +44,41 @@ footer{
 /****************** header and text ******************/
 /*****************************************************/
 h1{
-	font-size: 36px;
+	font-size: 45px;
 	line-height: 40px;
 	font-weight: bold;
 }
 h2{
-	font-size: 22px;
+	font-size: 30px;
 	text-align: center;
 	padding: 0 5%;
 	margin: 2%;
 	color: black;
 }
 h3{
-	font-size: 16px;
+	font-size: 20px;
 	text-align: center;
 	padding: 0 5%;
 	margin: 1%;
 	color: black;
 }
 h4{
-	font-size: 15px;
+	font-size: 18px;
 	text-align: center;
 	padding: 0 5%;
 	margin: 1%;
 	color: gray;
+	font-weight: 500;
 }
 /*h in project-content*/
 h5{
 	margin: 2% 0;
 	color: #FF6C00;
-	font-size: 26px;
+	font-size: 30px;
 }
 h6{
 	margin: 2% 0;
-	font-size: 20px;
-	border-bottom: 1px solid;
-	display: inline-block;
-	color: gray;
+	font-size: 25px;
 }
 hr{
 	border-color: #FF6C00;
@@ -89,11 +89,10 @@ hr{
 }
 p{
 	color: rgb(64, 64, 64);
-	margin: 0%;
-	font-size: 17px;
-	line-height: 30px;}
+	font-size: 20px;}
 b{
-	font-size: 18px;}
+	font-size: 20px;
+	font-weight: 600;}
 a{
 	color: gray;
 	text-decoration: none;
@@ -364,7 +363,7 @@ img.project-size{
 }
 img.img-col-one{
 	width: 100%;
-	margin: 3% 0 1% 0;
+	margin: 1% 0 1% 0;
 	height: auto;
 }
 img.img-col-one-80{
@@ -510,7 +509,7 @@ img.img-intro{
 	display: table;
 	float: left;
 	position: relative;
-	margin: 2%;
+	margin: 5% 2%;
 	/*background-color: rgba(248, 157, 70, 0.2);*/
 	/*box-shadow: 10px 10px 50px grey; */
 	transition: all .2s ease-in-out;
