--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 	margin: 0 1%;
 	/*font-family: 'Montserrat', serif;*/
 	/*font-family: 'Raleway', serif;*/
-	font-family: 'Source Sans Pro';
+font-family: 'Source Sans Pro', sans-serif;
 }
 article, aside, footer, header, main, nav, section {display: block;}
 body{
@@ -43,26 +43,26 @@ footer{
 /*****************************************************/
 /****************** header and text ******************/
 /*****************************************************/
-h1{
+h1{/*main title center*/
 	font-size: 45px;
 	line-height: 40px;
 	font-weight: bold;
 }
-h2{
-	font-size: 30px;
-	text-align: center;
+h2{/*orange middle, work, intro*/
+	font-size: 28px;
+	text-align: center;	
 	padding: 0 5%;
 	margin: 2%;
-	color: black;
+	color: #FF6C00;
 }
-h3{
+h3{/*black, center, project name*/
 	font-size: 20px;
-	text-align: center;
+	text-align: center;		
 	padding: 0 5%;
 	margin: 1%;
 	color: black;
 }
-h4{
+h4{/*gray, center*/
 	font-size: 18px;
 	text-align: center;
 	padding: 0 5%;
@@ -70,15 +70,16 @@ h4{
 	color: gray;
 	font-weight: 500;
 }
-/*h in project-content*/
-h5{
+h5{/*orange, large, left*/
+	font-size: 34px;
 	margin: 2% 0;
 	color: #FF6C00;
-	font-size: 30px;
 }
-h6{
-	margin: 2% 0;
-	font-size: 25px;
+h6{/*black, can be capitals, left*/
+	font-size: 22px;	
+	margin: 1% 0;
+	color: black;
+	font-weight: 700;
 }
 hr{
 	border-color: #FF6C00;
@@ -108,6 +109,7 @@ mark{
 span.caption{
 	width: 100%;
 	padding-bottom: 20%;
+	font-size: 16px;
 	text-align: center;
 }
 .iframe-container {
@@ -123,53 +125,62 @@ span.caption{
    top: 0;
    width: 100%;
 }
+ol{
+	float: left;
+	width: 90%;
+	height: 100%;
+}
 /*****************************************************/
 /********************* parallax **********************/
 /*****************************************************/
-.parallax-100{ 
-    /* Full height */
-    height: 100%; 
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#trans1 {
+  background: url('img/bg.svg') no-repeat fixed;
+  height:100%;
+  background-position: center top;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-.parallax-small{ 
-    width: 100%;
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+#about {
+	background: url('img/bg-about.svg') no-repeat top center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	display: block;
+	overflow: auto;
 }
-.parallax-art{ 
-	height: 60%; 
-    /*width: 100%;*/
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#intro-art {
+	background: url('img/bg-about.svg') no-repeat top center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	display: block;
+	overflow: auto;
 }
-.parallax-index-1{
-	/*background-color: #FFDEAD;*/
-	background-image: url("img/bg.svg");
+.parallax {
+  position:relative;
+  z-index:1;
+  height:100%;
 }
-.parallax-art-1{ 
-    background-color: #FFDEAD;
-    background-image: url("img/parallax_art_1.jpg");
+.parallax-project{
+  position:relative;
+  z-index:1;
+  height:60%;	
 }
-.parallax-krtco{background-image: url("projects/banner/krtco.jpg");}	
-.parallax-nsysuhero{background-image: url("projects/banner/nsysuhero.jpg");}
-.parallax-designdiary{background-image: url("projects/banner/designdiary.jpg");}
-.parallax-artism{background-image: url("projects/banner/artism.jpg");}
+.intro-krtco{background-color:#F9FCFF;}	
+.intro-nsysuhero{background-color:#DDFFF1;}
+.intro-designdiary{background-color:#FFF6D3;}
+.intro-artism{background-color:#EBFFD4;}
 /*****************************************************/
 /******************* structures **********************/
 /*****************************************************/
 .intro{
 	text-align: center;
-	padding: 15% 5% 8% 5%;
+	padding: 10% 5% 8% 5%;
 	color: black;
 	z-index: 98;
 }
@@ -196,7 +207,7 @@ span.caption{
 .hcenter{margin-top: 24%;}
 .btn-visit{
 	width: 40%;
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 600;
 	margin: auto;
 	margin-top: 6%;
@@ -359,7 +370,7 @@ span.caption{
 img.project-size{
 	width: 100%;
 	height: auto;
-	padding: 2.5% 0% 0% 0%;
+	padding: -1% 0 0 0;
 }
 img.img-col-one{
 	width: 100%;
@@ -410,10 +421,16 @@ img.img-small-logo{
 	height: auto;
 	float: left;
 }
+img.img-project-intro{
+	margin: 2% 0%;
+}
 img.img-intro{
 	width: 100%;
 	margin: 4% 0% 1% 0%;
 	height: auto;
+}
+img.img-original{
+	margin: 4% 0% 1% 0%;
 }
 .svg-index{
 	width: 40%;
@@ -425,10 +442,16 @@ img.img-intro{
 	float: left;
 	width: 60%;
 	height: 100%;
-	padding: 2% 20%;
+	padding: 3.5% 20%;
 }
 .row-project-color{
 	background-color: #fffaf0;
+}
+.row-thin{
+	float: left;
+	width: 60%;
+	height: 100%;
+	padding: 0% 20% 1% 20%;
 }
 .row-full{
 	float: left;
@@ -454,7 +477,7 @@ img.img-intro{
 }
 .col-three{
 	float: left;
-	width: 28.333333%;
+	width: 29.333333%;
 	margin: 2%;
 	position: relative;
 }
@@ -470,9 +493,15 @@ img.img-intro{
 	margin: 0 2%;
 	position: relative;
 }
+.col-intro-img{
+	float: left;
+	width: 31%;
+	margin: 1% 2%;
+	position: relative;
+}
 .col-intro{
 	float: left;
-	width: 46%;
+	width: 61%;
 	margin: 1% 2%;
 	position: relative;
 }
@@ -509,14 +538,20 @@ img.img-intro{
 	display: table;
 	float: left;
 	position: relative;
-	margin: 5% 2%;
+	margin: 2%;
 	/*background-color: rgba(248, 157, 70, 0.2);*/
 	/*box-shadow: 10px 10px 50px grey; */
 	transition: all .2s ease-in-out;
 }
 .project-small:hover{
-	background-color: #fffaf0;
+	background-color: #FF6C00; 
 	transform: scale(1.05);
+}
+.project-small:hover h3{
+	color: white;
+}
+.project-small:hover h4{
+	color: white;
 }
 .tracking-in-contract {
 	-webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) 1.6s both;
@@ -661,4 +696,119 @@ img.img-intro{
 	margin: auto;
 	text-align: center;
 	background-color:white; 
+}
+/*****************************************************/
+/************************ lightbox ************************/
+/*****************************************************/
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 99;
+  padding-top: 2%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+/* Modal Content */
+.modal-content {
+	position: relative;
+	z-index: 99;
+	margin: auto;
+	padding: 0;
+	height: 90%;
+	max-width: 1000px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  z-index: 100;
+}
+.close:hover,
+.close:focus {
+  color: #FF6C00;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+  display: none;
+  width: fit-content;
+}
+.img-in-lightbox{
+	width: 100%;
+	margin: 0 auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+  z-index: 100;  
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+	cursor: pointer;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
