--- a/style-mobile.css
+++ b/style-mobile.css
@@ -381,13 +381,22 @@ img.img-intro{
 	width: 100%;
 	margin: 4% 0% -3% 0%;
 	height: auto;
-	}
+}
 .col-intro{
     float: left;
     width: 90%;
     margin: 0 5%;
     position: relative;
-	}
+}
+#about{
+	background: url('img/bg-about.svg') no-repeat top center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	display: block;
+	height: fit-content;
+}
 }
 
 @media only screen and (max-width: 750px){
