--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h5{/*orange, large, left*/
 	color: #FF6C00;
 }
 h6{/*black, can be capitals, left*/
-	font-size: 22px;	
+	font-size: 19px;	
 	margin: 1% 0;
 	color: black;
 	font-weight: 700;
@@ -94,7 +94,8 @@ p{
 }
 b{
 	font-size: 20px;
-	font-weight: 700;}
+	font-weight: 700;
+	margin-bottom: 10%;}
 a{
 	color: gray;
 	text-decoration: none;
@@ -109,9 +110,15 @@ mark{
 }
 span.caption{
 	width: 100%;
-	padding-bottom: 20%;
-	font-size: 16px;
+	font-size: 14px;
 	text-align: center;
+}
+.number{
+	width: 100%;
+	font-size: 85px;
+	color: #FFDEAD;
+	margin-bottom: -4%;
+	margin-top: 3%;
 }
 .iframe-container {
   overflow: hidden;
@@ -136,7 +143,7 @@ ol{
 /*****************************************************/
 #trans1 {
   background: url('img/bg.svg') no-repeat fixed;
-  height:100%;
+  height:80%;
   background-position: center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -185,13 +192,12 @@ ol{
 	color: black;
 	z-index: 98;
 }
-.article-index{margin: 10% 0;}
 .wrapper-project{
 	width: 100%;
 	padding: 2% 0;
 	margin: 0 auto;
 }
-.wrapper{padding: 30px 0;
+.wrapper-index{padding: 30px 0;
 }
 /*****************************************************/
 /******************** buttons ************************/
@@ -221,7 +227,7 @@ ol{
 }
 .btn-visit:hover{
 	width: 40%;
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 600;
 	margin: auto;
 	margin-top: 6%;
@@ -427,14 +433,15 @@ img.img-project-intro{
 }
 img.img-intro{
 	width: 100%;
-	margin: 4% 0% 1% 0%;
+	margin: 4% 0% 0% 0%;
 	height: auto;
 }
 img.img-original{
 	margin: 4% 0% 1% 0%;
 }
-.svg-index{
-	width: 40%;
+img.img-icon{
+	width: 100px;
+	height: 100px;
 }
 /*****************************************************/
 /******************* row and col *********************/
@@ -444,6 +451,12 @@ img.img-original{
 	width: 60%;
 	height: 100%;
 	padding: 3.5% 20%;
+}
+.row{
+	float: left;
+	width: 100%;
+	height: 100%;
+	padding: 0%;	
 }
 .row-project-color{
 	background-color: #fffaf0;
@@ -462,7 +475,7 @@ img.img-original{
 .row-intro{
 	float: left;
 	width: 90%;
-	padding: 5% 5%;
+	padding: 5%;
 }
 .col-one{
 	float: left;
@@ -485,7 +498,7 @@ img.img-original{
 .col-four{
 	float: left;
 	width: 21%;
-	margin: 0 2%;
+	margin: 1% 2%;
 	position: relative;
 }
 .col-gif{
@@ -497,7 +510,7 @@ img.img-original{
 .col-intro-img{
 	float: left;
 	width: 31%;
-	margin: 1% 2%;
+	margin: 7% 2%;
 	position: relative;
 }
 .col-intro{
@@ -506,32 +519,38 @@ img.img-original{
 	margin: 1% 2%;
 	position: relative;
 }
+.col-icon{
+	float: left;
+	width: 9%;
+	margin: 3%;
+	position: relative;
+}
+.col-list{
+	float: left;
+	width: 79%;
+	margin: 3%;
+	position: relative;
+}
 .a-link{
 	text-decoration: underline;
 }
 /*****************************************************/
 /********************** index ************************/
 /*****************************************************/
-.traits{
+.card{
 	float: left;
-    width: 25.33333%;
+    width: 26.33333%;
     height: 18%;
     margin: 3% 2%;
     position: relative;
-	padding: 2%;
+	padding: 1%;
 	text-align: center;
     border-radius: 10%;
     background-color: white;
 }
-.section-project{
-	width: 70%;
-	float: left;
-	padding: 5% 15%;	
-}
-.section-trait{
-	width: 70%;
-	float: left;
-	padding: 5% 15%;
+.section-index{
+	width: 68%;
+	padding: 3% 16%;
 }
 .project-small{
 	cursor: pointer;
