--- a/style.css
+++ b/style.css
@@ -55,19 +55,18 @@ h2{/*orange middle, work, intro*/
 	color: #FF6C00;
 }
 h3{/*black, center, project name*/
-	font-size: 20px;
+	font-size: 22px;
 	text-align: center;		
-	padding: 0 5%;
+	padding: 3%;
 	margin: 1%;
 	color: black;
 }
 h4{/*gray, center*/
-	font-size: 18px;
+	font-size: 20px;
 	text-align: center;
 	padding: 0 5%;
 	margin: 1%;
 	color: gray;
-	/*font-weight: 500;*/
 }
 h5{/*orange, large, left*/
 	font-size: 34px;
@@ -79,6 +78,9 @@ h6{/*black, can be capitals, left*/
 	margin: 1% 0;
 	color: black;
 	font-weight: 700;
+}
+.color-white{
+	color: white;
 }
 hr{
 	border-color: #FF6C00;
@@ -143,7 +145,7 @@ ol{
 /*****************************************************/
 #trans1 {
   background: url('img/bg.svg') no-repeat fixed;
-  height: 100%;
+  height: 95%;
   background-position: center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -183,6 +185,8 @@ ol{
 .intro-nsysuhero{background-color:#DDFFF1;}
 .intro-designdiary{background-color:#FFF6D3;}
 .intro-artism{background-color:#EBFFD4;}
+.intro-sport{background-color:#B9CEFF;}
+.intro-hcx{background-color:#F6FFA8;}
 /*****************************************************/
 /******************* structures **********************/
 /*****************************************************/
@@ -197,7 +201,7 @@ ol{
 	padding: 2% 0;
 	margin: 0 auto;
 }
-.wrapper-index{padding: 30px 0;
+.wrapper-index{padding: 30px;
 }
 /*****************************************************/
 /******************** buttons ************************/
@@ -539,9 +543,9 @@ img.img-icon{
 /*****************************************************/
 .card{
 	float: left;
-    width: 26.33333%;
+    width: 29.33333%;
     height: 18%;
-    margin: 3% 2%;
+    margin: 3% 1%;
     position: relative;
 	padding: 1%;
 	text-align: center;
@@ -549,22 +553,44 @@ img.img-icon{
     background-color: white;
 }
 .section-index{
-	width: 68%;
-	padding: 3% 16%;
+	width: 60%;
+	padding: 3% 20%;
+    display: inline-block;	
 }
-.project-small{
+.project-block{
 	cursor: pointer;
 	width: 46%;
 	display: table;
 	float: left;
 	position: relative;
 	margin: 2%;
-	/*background-color: rgba(248, 157, 70, 0.2);*/
-	/*box-shadow: 10px 10px 50px grey; */
-	transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;	
 }
-.project-small:hover{
-	transform: scale(0.95);
+.project-small{
+/*	cursor: pointer;
+	width: 46%;
+	display: table;
+	float: left;
+	position: relative;
+	margin: 2%;
+	transition: all .2s ease-in-out;*/
+}
+.project-block:hover{transform: scale(1.1);}
+.project-overlay{
+	background-color: #FF9F59;
+    position: absolute;
+    top: 0px;
+    opacity: 0;
+    height: 44%;
+    width: 80%; 
+	padding: 20% 10%;
+	transition: all .3s ease-in-out;
+}
+.project-block:hover .project-overlay {
+	opacity: .9;
+	-webkit-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
+	-moz-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
+	box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
 }
 .tracking-in-contract {
 	-webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) 1.6s both;
