update UX journey

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -230,7 +230,7 @@ footer{
     width: 49.99999%;
     margin: 6px 0;
 }
-.project-small{
+.project-block{
 	cursor: pointer;
 	width: 100%;
 	display: table;
