--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h4{/*gray, center*/
 	color: gray;
 }
 h5{/*orange, large, left*/
-	font-size: 34px;
+	font-size: 32px;
 	margin: 2% 0;
 	color: #FF6C00;
 }
@@ -145,7 +145,7 @@ ol{
 /*****************************************************/
 #trans1 {
   background: url('img/bg.svg') no-repeat fixed;
-  height: 70%;
+  height: 95%;
   background-position: center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -172,7 +172,7 @@ ol{
 	overflow: auto;
 }
 .journey{
-	padding: 4.5% .5%;
+	padding: 4.5% 0%;
 	background: url('img/bg-journey.png') no-repeat;
 	background-size: 100% auto;
 }
@@ -192,12 +192,13 @@ ol{
 .intro-artism{background-color:#EBFFD4;}
 .intro-sport{background-color:#B9CEFF;}
 .intro-hcx{background-color:#F6FFA8;}
+.bg-colorwall{background-color:#EBFFD4;}
 /*****************************************************/
 /******************* structures **********************/
 /*****************************************************/
 .intro{
 	text-align: center;
-	padding: 10% 5% 8% 5%;
+	padding: 15% 5% 8% 5%;
 	color: black;
 	z-index: 98;
 }
@@ -222,12 +223,13 @@ ol{
 }
 .hcenter{margin-top: 24%;}
 .btn-visit{
-	width: 40%;
-	font-size: 20px;
+	width: 28%;
+	font-size: 16px;
 	font-weight: 600;
+	letter-spacing: 4px;
 	margin: auto;
-	margin-top: 6%;
-	margin-bottom: 6%;
+	margin-top: 4%;
+	margin-bottom: 4%;
 	padding: 20px;
 	text-align: center;
 	background-color: #FF6C00;
@@ -235,18 +237,18 @@ ol{
 	color: white;
 }
 .btn-visit:hover{
-	width: 40%;
-	font-size: 20px;
+	width: 28%;
+	font-size: 16px;
 	font-weight: 600;
+	letter-spacing: 4px;
 	margin: auto;
-	margin-top: 6%;
-	margin-bottom: 6%;
+	margin-top: 4%;
+	margin-bottom: 4%;
 	padding: 20px;
 	text-align: center;
-	background-color: #BA4F00;
+	box-shadow: 2px 2px 12px grey;	
 	color: white;
-	box-shadow: 2px 2px 12px grey;
- 	/*transition: background-color 0.5s ease;*/
+	background-color: #BA4F00;
 }
 /*****************************************************/
 /********************* footer ************************/
@@ -462,7 +464,7 @@ img.img-journey{
 	float: left;
 	width: 60%;
 	height: 100%;
-	padding: 3.5% 20%;
+	padding: 4% 20%;
 }
 .row{
 	float: left;
@@ -564,6 +566,7 @@ img.img-journey{
 	width: 60%;
 	padding: 3% 20%;
     display: inline-block;	
+    text-align: center;
 }
 .project-block{
 	cursor: pointer;
@@ -583,7 +586,7 @@ img.img-journey{
 	margin: 2%;
 	transition: all .2s ease-in-out;*/
 }
-.project-block:hover{transform: scale(1.1);}
+.project-block:hover{transform: scale(1);}
 .project-overlay{
 	background-color: #FF9F59;
     position: absolute;
@@ -595,7 +598,7 @@ img.img-journey{
 	transition: all .3s ease-in-out;
 }
 .project-block:hover .project-overlay {
-	opacity: .9;
+	opacity: .95;
 	-webkit-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
 	-moz-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
 	box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
@@ -831,7 +834,7 @@ img.img-journey{
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -851,11 +854,12 @@ img.img-journey{
   opacity: 1;
 }
 
-img.hover-shadow {
-  transition: 0.3s;
+img.hover {
+  transition: transform .2s; /* Animation */
 }
 
-.hover-shadow:hover {
+.hover:hover {
 	cursor: pointer;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	transform: scale(1.05);
+	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
