--- a/style.css
+++ b/style.css
@@ -42,19 +42,16 @@ footer{
 /*****************************************************/
 /****************** header and text ******************/
 /*****************************************************/
-.name{
-	font-size: 50px;
-}
 h1{/*main title center*/
-	font-size: 35px;
-	line-height: 100px;
+	font-size: 33px;
+	line-height: 50px;
 	font-weight: 700;
 }
 h2{/*orange middle, work, intro*/
 	font-size: 28px;
 	text-align: center;	
 	padding: 0 5%;
-	margin: 2%;
+	margin: 1%;
 	color: #FF6C00;
 }
 h3{/*black, center, project name*/
@@ -68,7 +65,7 @@ h4{/*gray, center*/
 	font-size: 20px;
 	text-align: center;
 	padding: 0 5%;
-	margin: 1%;
+	margin: 0%;
 	color: gray;
 }
 h5{/*orange, large, left*/
@@ -148,7 +145,7 @@ ol{
 /*****************************************************/
 #trans1 {
   background: url('img/bg.svg') no-repeat fixed;
-  height: 100%;
+  height: 50%;
   background-position: center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -198,13 +195,20 @@ ol{
 .intro-hcx{background-color:#F6FFA8;}
 .bg-dwb{background-color:#EBFFD4 !important;}
 .bg-spending{background-color:#FFE8F5 !important;}
+.bg-steve{background-color:#DDF1F2 !important;}
 /*****************************************************/
 /******************* structures **********************/
 /*****************************************************/
+.intro-index{
+	text-align: left;
+	padding: 10% 0%;
+	color: #737373;
+	z-index: 98;
+}
 .intro{
 	text-align: center;
-	padding: 10% 20% 5% 20%;
-	color: black;
+	padding: 10% 0%;
+	color: #737373;
 	z-index: 98;
 }
 .wrapper-project{
@@ -234,7 +238,7 @@ ol{
 	width: 28%;
 	font-size: 16px;
 	font-weight: 600;
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	margin: auto;
 	margin-top: 4%;
 	margin-bottom: 4%;
@@ -592,36 +596,27 @@ img.img-journey{
     text-align: center;
 }
 .project-block{
-	width: 29%;
+	width: 80%;
 	cursor: pointer;
 	display: table;
 	float: left;
 	position: relative;
-	margin: 2%;
+	margin: 2% 10%;
 	transition: all .2s ease-in-out;	
 }
-.project-small{
-/*	cursor: pointer;
-	width: 46%;
-	display: table;
-	float: left;
-	position: relative;
-	margin: 2%;
-	transition: all .2s ease-in-out;*/
-}
-.project-block:hover{transform: scale(1);}
+.project-block:hover{transform: scale(1.01);}
 .project-overlay{
-	background-color: #FF9F59;
+	background-color: #FFFFFF;
     position: absolute;
     top: 0px;
     opacity: 0;
-    height: 44%;
-    width: 80%; 
-	padding: 15% 10% 25% 10%;
+    height: 96.5%;
+    width: 100%; 
+	/*padding: 15% 10% 25% 10%;*/
 	transition: all .3s ease-in-out;
 }
 .project-block:hover .project-overlay {
-	opacity: .99;
+	opacity: .2;
 	-webkit-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
 	-moz-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
 	box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.88);
@@ -666,7 +661,34 @@ img.img-journey{
     opacity: 1;
   }
 }
-
+.img-height{
+	visibility: hidden;
+	/*position: absolute;*/
+}
+.row-index{
+	position: relative;
+}
+.row-index:hover .project-title{
+	color: #FF6C00;
+}
+.project-title, .project-description, .project-year{
+	color: #737373;
+	position: absolute;	
+	left: 50%;	
+}
+.project-title{
+	font-size: 30px;
+	font-weight: bold;
+	top: 30%;
+}
+.project-description{
+	font-size: 18px;
+	top: 45%;
+}
+.project-year{
+	font-size: 16px;
+	top: 58%;
+}
 /*****************************************************/
 /********************** project **********************/
 /*****************************************************/
