--- a/style.css
+++ b/style.css
@@ -79,6 +79,14 @@ h6{/*black, can be capitals, left*/
 	color: black;
 	font-weight: 700;
 }
+.hmw{
+	text-align: center;
+	font-size: 32px;
+	line-height: 42px;
+	margin: 2% 0;
+	color: #737373;
+	font-weight: 300;
+}
 .color-white{
 	color: white;
 }
